--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env:attiny85]
 platform = atmelavr
 board = attiny85
 framework = arduino
-
+build_src_filter = 
+    -<client.*>
+    +<main.*>
+    -<../test/*.*>
 upload_protocol = stk500v1
 upload_flags =
     -P$UPLOAD_PORT
@@ -31,7 +35,8 @@ build_flags =
     -L/usr/local/lib/
     -lelf
     -DFIRMWARE_PATH="\"${platformio.build_dir}/attiny85/firmware.elf\""
-
+build_src_filter = 
+    -<client.*>
 extra_scripts = post:extra_script.py
 platform_packages =
     platformio/tool-simavr
@@ -45,6 +50,27 @@ platform_packages =
 test_framework = unity
 test_speed = 9600
 
+
+[env:client]
+
+platform = native
+build_flags = 
+    -DFIRMWARE_PATH="\"${platformio.build_dir}/attiny85/firmware.elf\""
+
+build_src_filter = 
+    +<../client/client.*>
+    -<main.*>
+    -<../test/*.*>
+extra_scripts = post:extra_script_client.py
+platform_packages =
+    platformio/tool-simavr
+    platformio/toolchain-atmelavr
+
+#lib_deps = 
+#    robusto
+#    https://github.com/nicklasb/robusto-platformio.git
+
+#lib_ignore = esp_modem, esp_lgvl_port, lvgl, Radiolib
 
 [test]
 framework = unity
