Comment out ncurses for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "sim_cycle_timers.h": "c",
         "unistd.h": "c",
         "sim_elf.h": "c",
-        "ncurses.h": "c"
+        "ncurses.h": "c",
+        "sim_irq.h": "c"
     }
 }
