--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,7 @@ build_src_filter =
     -<client.*>
 extra_scripts = post:extra_script.py
 platform_packages =
-    platformio/tool-simavr
+    pio pkg install --global --tool "platformio/tool-simavr@^1.10700.210831"
     platformio/toolchain-atmelavr
 
 #lib_deps = 
@@ -55,13 +55,19 @@ test_speed = 9600
 
 platform = native
 build_flags = 
-    -DFIRMWARE_PATH="\"${platformio.build_dir}/attiny85/firmware.elf\""
+    -D FIRMWARE_PATH="\"C:/Users/Nickl/Projects/I2C_dimmer/attiny85/firmware.elf\""
+    -IC:/Users/Nickl/.platformio/packages/tool-simavr/include/simavr
+    -LC:/Users/Nickl/.platformio/packages/tool-simavr/lib
+    -LC:/msys64/mingw64/lib
+    -lsimavr
+    -lelf
+    --verbose
 
 build_src_filter = 
     +<../client/client.*>
     -<main.*>
     -<../test/*.*>
-extra_scripts = post:extra_script_client.py
+#extra_scripts = post:extra_script_client.py
 platform_packages =
     platformio/tool-simavr
     platformio/toolchain-atmelavr
