Running, interactable sim

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,12 +55,13 @@ test_speed = 9600
 
 platform = native
 build_flags = 
-    -D FIRMWARE_PATH="\"C:/Users/Nickl/Projects/I2C_dimmer/attiny85/firmware.elf\""
-    -IC:/Users/Nickl/.platformio/packages/tool-simavr/include/simavr
-    -LC:/Users/Nickl/.platformio/packages/tool-simavr/lib
-    -LC:/msys64/mingw64/lib
+    -D FIRMWARE_PATH="\"${platformio.build_dir}/attiny85/firmware.elf\""
+    -I${platformio.packages_dir}/tool-simavr/include/simavr
+    -L${platformio.packages_dir}/tool-simavr/lib
+    -I/usr/local/include/SDL2/
     -lsimavr
     -lelf
+    -lSDL2
     --verbose
 
 build_src_filter = 
@@ -77,6 +78,6 @@ platform_packages =
 #    https://github.com/nicklasb/robusto-platformio.git
 
 #lib_ignore = esp_modem, esp_lgvl_port, lvgl, Radiolib
-
+upload_speed = 115200
 [test]
 framework = unity
