--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "unistd.h": "c",
         "sim_elf.h": "c",
         "ncurses.h": "c",
-        "sim_irq.h": "c"
+        "sim_irq.h": "c",
+        "sdl_keyboard.h": "c"
     }
 }
