Remove unneccecary scripting, more docs

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,22 +31,18 @@ board_fuses.efuse = 0xFF
 [env:testing]
 platform = native
 build_flags = 
-    -I/usr/local/include/libelf/
-    -L/usr/local/lib/
+    -D FIRMWARE_PATH="\"${platformio.build_dir}/attiny85/firmware.elf\""
+    -I${platformio.packages_dir}/tool-simavr/include/simavr
+    -L${platformio.packages_dir}/tool-simavr/lib
+    -lsimavr
     -lelf
-    -DFIRMWARE_PATH="\"${platformio.build_dir}/attiny85/firmware.elf\""
+    --verbose
 build_src_filter = 
     -<client.*>
-extra_scripts = post:extra_script.py
 platform_packages =
-    pio pkg install --global --tool "platformio/tool-simavr@^1.10700.210831"
+    platformio/tool-simavr
     platformio/toolchain-atmelavr
 
-#lib_deps = 
-#    robusto
-#    https://github.com/nicklasb/robusto-platformio.git
-
-#lib_ignore = esp_modem, esp_lgvl_port, lvgl, Radiolib
 test_framework = unity
 test_speed = 9600
 
@@ -68,16 +64,10 @@ build_src_filter =
     +<../client/client.*>
     -<main.*>
     -<../test/*.*>
-#extra_scripts = post:extra_script_client.py
 platform_packages =
     platformio/tool-simavr
     platformio/toolchain-atmelavr
 
-#lib_deps = 
-#    robusto
-#    https://github.com/nicklasb/robusto-platformio.git
-
-#lib_ignore = esp_modem, esp_lgvl_port, lvgl, Radiolib
 upload_speed = 115200
 [test]
 framework = unity
