Fix for Windows

--- a/platformio.ini
+++ b/platformio.ini
@@ -47,7 +47,7 @@ test_framework = unity
 test_speed = 9600
 
 
-[env:client]
+[env:client_macos]
 
 platform = native
 build_flags = 
@@ -69,5 +69,36 @@ platform_packages =
     platformio/toolchain-atmelavr
 
 upload_speed = 115200
+
+
+[env:client_windows]
+
+platform = native
+# On windows, I haven't made the path parameters expand properly
+build_flags = 
+    -D FIRMWARE_PATH=\"C:/Users/Nickl/Projects/ATTINY_dimmer/.pio/build/attiny85/firmware.elf\" # Change to the project location
+    -IC:/Users/Nickl/dev-deps/tool-simavr/include # Change to where you've installed simavr
+    -LC:/Users/Nickl/dev-deps/tool-simavr/lib  # Change to where you've installed simavr
+    -IC:/msys64/mingw64/include/ # Change to where you've installed mingw
+    -LC:/msys64/mingw64/lib/ # Change to where you've installed mingw
+    -lSDL2
+    -lSDL2main
+    -lsimavr
+    -lelf
+    -lmingw32
+    -lws2_32
+    --verbose
+
+build_src_filter = 
+    +<../client/client.*>
+    -<main.*>
+    -<../test/*.*>
+platform_packages =
+    platformio/tool-simavr
+    platformio/toolchain-atmelavr
+
+upload_speed = 115200
+
+
 [test]
 framework = unity
